--- a/Patrones de invocaciones con tipo de funciones.ipynb
+++ b/Patrones de invocaciones con tipo de funciones.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "ae689e2c",
+   "metadata": {},
+   "source": [
+    "se procesa todo el dataset para encontrar funciones con  periodos exactos y agregando que tipo de trigger es la función"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b7d43cd7",
