libro de simulacion, falta debug final

--- a/Serie de tiempo.ipynb
+++ b/Serie de tiempo.ipynb
@@ -834,6 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# funcion que desplazar una cantidad de funciones, para que empiecen en otros minutos\n",
     "# lista, es la lista de Id,HashFunction de las funciones que se va a modificar\n",
     "# n, numero de funciones a modificar\n",
     "# s, parametros de cuantos minutos se desea mover o desfazar la funciones \n",
@@ -880,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#funcion que mueve funcion de acuerdo a su perido, \n",
+    "#funcion que mueve funciones de acuerdo a su perido, \n",
     "# funciones con periodo 5min, analiza los 5 primeros minutos, y mueve la funcionesa al\n",
     "# minuto con menos carga dentro de su rango \n",
     "\n",
@@ -1189,7 +1190,7 @@
     }
    ],
    "source": [
-    "#se carga el csv Periodos_All generado en el cuaderno Patrones de invocaciones con tipo de funciones.ipynbfun\n",
+    "#se carga el csv Periodos_All generado en el cuaderno \"Patrones de invocaciones con tipo de funciones.ipynb\"\n",
     "fun_perd_all = pd.read_csv(\"Periodos_All.csv\")\n",
     "fun_perd_all"
    ]
@@ -1435,6 +1436,8 @@
     }
    ],
    "source": [
+    "#devido a que en csv anterior exiten muchos peridos y solo requerimos los de valores exactos se clasifican y eliminan\n",
+    "los que incumplan \n",
     "countt = fun_perd_all[fun_perd_all['Desv_Est']<=1].reset_index(drop=True)\n",
     "def clasif(x):\n",
     "    dec, ent = math.modf(x)\n",
