cv para graficas event + queue y su complemento

--- a/Preguntas.ipynb
+++ b/Preguntas.ipynb
@@ -20,6 +20,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "id": "1a9a790b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coeficiente de variacion \n",
+    "cv = lambda x: np.std(x, ddof = 1) / np.mean(x) #zz* 100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "2443a965",
    "metadata": {},
@@ -1118,26 +1129,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "5989e587",
+   "execution_count": 81,
+   "id": "76fc2ea5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8060, 1441)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#cond = dia['Trigger']==\"event\" or dia['Trigger']==\"queue\"\n",
-    "#dia[~dia.Trigger.isin([\"event\",\"queue\"])].shape"
+    "dia[dia.Trigger.isin([\"event\",\"queue\"])].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "ae1b2717",
+   "execution_count": 84,
+   "id": "a4077a5c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficiente del Hurts funciones event + queue  [0.06444547]\n"
+      "Coeficiente del Hurts funciones event + queue:  [0.06444547]\n",
+      "Coeficiente de variacion funciones event + queue: 0.10292343690876757\n"
      ]
     },
     {
@@ -1162,22 +1185,25 @@
     "plt.xticks(np.arange(0, 1440,60))\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"flujo de trabajo funciones event + queue \")\n",
-    "print(\"Coeficiente del Hurts funciones event + queue \", \n",
+    "print(\"Coeficiente del Hurts funciones event + queue: \", \n",
     "      hurst(pd.DataFrame(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
+    "print(\"Coeficiente de variacion funciones event + queue:\", \n",
+    "      cv(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
     "plt.ion()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "9ddc53e6",
+   "execution_count": 86,
+   "id": "a1cfe258",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficiente del Hurts funciones sin event y queue  [0.07838215]\n"
+      "Coeficiente del Hurts funciones sin event y queue:  [0.07838215]\n",
+      "Coeficiente de variacion unciones sin event y queue:  -0.10292321431176686\n"
      ]
     },
     {
@@ -1202,14 +1228,40 @@
     "plt.xticks(np.arange(0, 1440,60))\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"flujo de trabajo funciones sin event y queue \")\n",
-    "print(\"Coeficiente del Hurts funciones sin event y queue \", hurst(pd.DataFrame(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
+    "print(\"Coeficiente del Hurts funciones sin event y queue: \", hurst(pd.DataFrame(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
+    "print(\"Coeficiente de variacion unciones sin event y queue: \", \n",
+    "      cv(~dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
     "plt.ion()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5d53fc4",
+   "id": "e06b79c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0067298a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4e9970",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb0e8a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "9933c2ed",
+   "id": "d92fa12d",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "a1651ed6",
+   "id": "65ef36d6",
    "metadata": {},
    "outputs": [
     {
@@ -1283,23 +1335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "e73244c9",
+   "execution_count": 79,
+   "id": "d4621947",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.07398442])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coeficiente del Hurst para en dia analizado : [0.07398442]\n"
+     ]
     }
    ],
    "source": [
-    "hurst(pd.DataFrame(dia.drop(['Trigger'], axis = 1).sum()))"
+    "print(\"coeficiente del Hurst para en dia analizado :\", hurst(pd.DataFrame(dia.drop(['Trigger'], axis = 1).sum())))"
    ]
   }
  ],
