st_dev para graficas event + queue y su complemento

--- a/Preguntas.ipynb
+++ b/Preguntas.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "id": "496784c2",
    "metadata": {},
    "outputs": [
@@ -1129,8 +1129,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficiente del Hurts funciones event + queue:  [0.06444547]\n",
-      "Coeficiente de variacion funciones event + queue: 0.10292343690876757\n"
+      "estadisticos funciones event + queue: \n",
+      "Coeficiente del Hurts:  [0.06444547]\n",
+      "Coeficiente de variación:  0.10292343690876757\n",
+      "desviación estandar :  47572.66308178041\n"
      ]
     },
     {
@@ -1155,16 +1157,17 @@
     "plt.xticks(np.arange(0, 1440,60))\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"flujo de trabajo funciones event + queue \")\n",
-    "print(\"Coeficiente del Hurts funciones event + queue: \", \n",
-    "      hurst(pd.DataFrame(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
-    "print(\"Coeficiente de variacion funciones event + queue:\", \n",
-    "      cv(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
+    "print(\"estadisticos funciones event + queue: \")\n",
+    "print(\"Coeficiente del Hurts: \", hurst(pd.DataFrame(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
+    "print(\"Coeficiente de variación: \", cv(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
+    "print(\"desviación estandar : \", np.std(dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
+    "\n",
     "plt.ion()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "id": "4deb6d35",
    "metadata": {},
    "outputs": [
@@ -1172,8 +1175,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficiente del Hurts funciones sin event y queue:  [0.07838215]\n",
-      "Coeficiente de variacion unciones sin event y queue:  0.11088154524892176\n"
+      "estadisticos funciones sin event y queue: \n",
+      "Coeficiente del Hurts:  [0.07838215]\n",
+      "Coeficiente de Variación:  0.11088154524892176\n",
+      "desviación estandar :  19329.488038518975\n"
      ]
     },
     {
@@ -1198,9 +1203,10 @@
     "plt.xticks(np.arange(0, 1440,60))\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"flujo de trabajo funciones sin event y queue \")\n",
-    "print(\"Coeficiente del Hurts funciones sin event y queue: \", hurst(pd.DataFrame(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
-    "print(\"Coeficiente de variacion unciones sin event y queue: \", \n",
-    "      cv(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
+    "print(\"estadisticos funciones sin event y queue: \")\n",
+    "print(\"Coeficiente del Hurts: \", hurst(pd.DataFrame(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum())))\n",
+    "print(\"Coeficiente de variación: \",cv(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
+    "print(\"desviación estandar : \", np.std(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n",
     "plt.ion()"
    ]
   },
