--- a/Preguntas.ipynb
+++ b/Preguntas.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "3d40684f",
    "metadata": {},
    "outputs": [],
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0452a073",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "813fc9f4",
    "metadata": {},
    "outputs": [],
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c6f947ef",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "2aed5af7",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "1bf547c3",
    "metadata": {
     "scrolled": true
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "23c87264",
    "metadata": {},
    "outputs": [
@@ -1450,50 +1450,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>HashFunction</th>\n",
        "      <th>Coefficient of variation</th>\n",
        "      <th>Range</th>\n",
        "      <th>Standard deviation</th>\n",
        "      <th>Mean Absolute Deviation</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HashFunction</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96b3d7f85d46209b7872</th>\n",
+       "      <th>0</th>\n",
+       "      <td>520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96...</td>\n",
        "      <td>2.000695</td>\n",
        "      <td>1</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>0.320000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66e9a975e427f25fc7ed</th>\n",
+       "      <th>1</th>\n",
+       "      <td>115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66...</td>\n",
        "      <td>2.000695</td>\n",
        "      <td>1</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>0.320000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea91641fa075ccee3be3068</th>\n",
+       "      <th>2</th>\n",
+       "      <td>fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea916...</td>\n",
        "      <td>26.823491</td>\n",
        "      <td>1</td>\n",
        "      <td>0.037242</td>\n",
        "      <td>0.002774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed86ae062344eb0cb7c2e</th>\n",
+       "      <th>3</th>\n",
+       "      <td>93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed8...</td>\n",
        "      <td>8.611245</td>\n",
        "      <td>2</td>\n",
        "      <td>0.125537</td>\n",
        "      <td>0.028762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>740c5c767e4b9978ee59a97d1829cfbaf755a47806a3114f0d4c182bb5a7e253</th>\n",
+       "      <th>4</th>\n",
+       "      <td>740c5c767e4b9978ee59a97d1829cfbaf755a47806a311...</td>\n",
        "      <td>9.428234</td>\n",
        "      <td>3</td>\n",
        "      <td>0.150538</td>\n",
@@ -1505,37 +1504,43 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d100185182b218072e0e8b</th>\n",
+       "      <th>46652</th>\n",
+       "      <td>d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d100...</td>\n",
        "      <td>26.823491</td>\n",
        "      <td>1</td>\n",
        "      <td>0.037242</td>\n",
        "      <td>0.002774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>d43df62e0448cf994831aba36a262443378c03993bbb7b9570dfa86c9ba9f8da</th>\n",
+       "      <th>46653</th>\n",
+       "      <td>d43df62e0448cf994831aba36a262443378c03993bbb7b...</td>\n",
        "      <td>8.891282</td>\n",
        "      <td>1</td>\n",
        "      <td>0.111102</td>\n",
        "      <td>0.024687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>f1ff5a83374938d5da346b909ae4c6aaf6488f575116c9936860ae86ebb9e0d6</th>\n",
+       "      <th>46654</th>\n",
+       "      <td>f1ff5a83374938d5da346b909ae4c6aaf6488f575116c9...</td>\n",
        "      <td>37.947332</td>\n",
        "      <td>1</td>\n",
        "      <td>0.026343</td>\n",
        "      <td>0.001388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>d6a50fa610274244b42a39dcb31f28a699dc289ce5e7827fca931798074f3f63</th>\n",
+       "      <th>46655</th>\n",
+       "      <td>d6a50fa610274244b42a39dcb31f28a699dc289ce5e782...</td>\n",
        "      <td>12.613901</td>\n",
        "      <td>1</td>\n",
        "      <td>0.078810</td>\n",
        "      <td>0.012422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a45b1ceaf297327a0ee</th>\n",
+       "      <th>46656</th>\n",
+       "      <td>3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a...</td>\n",
        "      <td>37.947332</td>\n",
        "      <td>1</td>\n",
        "      <td>0.026343</td>\n",
@@ -1543,62 +1548,63 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>46657 rows × 4 columns</p>\n",
+       "<p>46657 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    Coefficient of variation  \\\n",
-       "HashFunction                                                                   \n",
-       "520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96b...                  2.000695   \n",
-       "115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66e...                  2.000695   \n",
-       "fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea9164...                 26.823491   \n",
-       "93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed86...                  8.611245   \n",
-       "740c5c767e4b9978ee59a97d1829cfbaf755a47806a3114...                  9.428234   \n",
-       "...                                                                      ...   \n",
-       "d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d1001...                 26.823491   \n",
-       "d43df62e0448cf994831aba36a262443378c03993bbb7b9...                  8.891282   \n",
-       "f1ff5a83374938d5da346b909ae4c6aaf6488f575116c99...                 37.947332   \n",
-       "d6a50fa610274244b42a39dcb31f28a699dc289ce5e7827...                 12.613901   \n",
-       "3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a4...                 37.947332   \n",
+       "                                            HashFunction  \\\n",
+       "0      520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96...   \n",
+       "1      115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66...   \n",
+       "2      fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea916...   \n",
+       "3      93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed8...   \n",
+       "4      740c5c767e4b9978ee59a97d1829cfbaf755a47806a311...   \n",
+       "...                                                  ...   \n",
+       "46652  d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d100...   \n",
+       "46653  d43df62e0448cf994831aba36a262443378c03993bbb7b...   \n",
+       "46654  f1ff5a83374938d5da346b909ae4c6aaf6488f575116c9...   \n",
+       "46655  d6a50fa610274244b42a39dcb31f28a699dc289ce5e782...   \n",
+       "46656  3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a...   \n",
        "\n",
-       "                                                    Range  Standard deviation  \\\n",
-       "HashFunction                                                                    \n",
-       "520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96b...      1            0.400000   \n",
-       "115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66e...      1            0.400000   \n",
-       "fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea9164...      1            0.037242   \n",
-       "93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed86...      2            0.125537   \n",
-       "740c5c767e4b9978ee59a97d1829cfbaf755a47806a3114...      3            0.150538   \n",
-       "...                                                   ...                 ...   \n",
-       "d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d1001...      1            0.037242   \n",
-       "d43df62e0448cf994831aba36a262443378c03993bbb7b9...      1            0.111102   \n",
-       "f1ff5a83374938d5da346b909ae4c6aaf6488f575116c99...      1            0.026343   \n",
-       "d6a50fa610274244b42a39dcb31f28a699dc289ce5e7827...      1            0.078810   \n",
-       "3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a4...      1            0.026343   \n",
+       "       Coefficient of variation  Range  Standard deviation  \\\n",
+       "0                      2.000695      1            0.400000   \n",
+       "1                      2.000695      1            0.400000   \n",
+       "2                     26.823491      1            0.037242   \n",
+       "3                      8.611245      2            0.125537   \n",
+       "4                      9.428234      3            0.150538   \n",
+       "...                         ...    ...                 ...   \n",
+       "46652                 26.823491      1            0.037242   \n",
+       "46653                  8.891282      1            0.111102   \n",
+       "46654                 37.947332      1            0.026343   \n",
+       "46655                 12.613901      1            0.078810   \n",
+       "46656                 37.947332      1            0.026343   \n",
        "\n",
-       "                                                    Mean Absolute Deviation  \n",
-       "HashFunction                                                                 \n",
-       "520dbd6bd906840012aa0c4b778743efc7c0ac7b7caf96b...                 0.320000  \n",
-       "115ca7a2b5bc290052c3da74cd0347d19c3c67b7d5aa66e...                 0.320000  \n",
-       "fa4f840d0cddc391a9afee2b15074f7f92bec15e7ea9164...                 0.002774  \n",
-       "93e6c664773bbec3a7f50a0e92fa7e97401a802dc6eed86...                 0.028762  \n",
-       "740c5c767e4b9978ee59a97d1829cfbaf755a47806a3114...                 0.031523  \n",
-       "...                                                                     ...  \n",
-       "d01feeef6c6a03ba8cc96dbfdcb8898106b18acbe9d1001...                 0.002774  \n",
-       "d43df62e0448cf994831aba36a262443378c03993bbb7b9...                 0.024687  \n",
-       "f1ff5a83374938d5da346b909ae4c6aaf6488f575116c99...                 0.001388  \n",
-       "d6a50fa610274244b42a39dcb31f28a699dc289ce5e7827...                 0.012422  \n",
-       "3d8e7e07d617138e120d85a3d46013ff848fe5e34fcc4a4...                 0.001388  \n",
+       "       Mean Absolute Deviation  \n",
+       "0                     0.320000  \n",
+       "1                     0.320000  \n",
+       "2                     0.002774  \n",
+       "3                     0.028762  \n",
+       "4                     0.031523  \n",
+       "...                        ...  \n",
+       "46652                 0.002774  \n",
+       "46653                 0.024687  \n",
+       "46654                 0.001388  \n",
+       "46655                 0.012422  \n",
+       "46656                 0.001388  \n",
        "\n",
-       "[46657 rows x 4 columns]"
+       "[46657 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.concat([dia_cv, dia_rango, dia_std, dia_mad], axis=1, keys=['Coefficient of variation','Range','Standard deviation', 'Mean Absolute Deviation'])"
+    "funciones_analisis= pd.concat([dia_cv, dia_rango, dia_std, dia_mad], axis=1, keys=['Coefficient of variation','Range','Standard deviation', 'Mean Absolute Deviation'])\n",
+    "funciones_analisis.insert(0, \"HashFunction\", funciones_analisis.index)\n",
+    "funciones_analisis.reset_index(drop=True, inplace = True)\n",
+    "funciones_analisis.to_csv(\"Metricas_desviacion_Funciones.csv\",index=False)\n",
+    "funciones_analisis"
    ]
   }
  ],
