dispersion todos, std event+queue y complemento

--- a/Preguntas.ipynb
+++ b/Preguntas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c10a2826",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2443a965",
    "metadata": {},
    "outputs": [],
@@ -8510,6 +8510,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "540028eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dia = pd.read_csv(\"invocations_per_function_md.anon.d05.csv\")\n",
+    "dia.drop(['HashApp', 'HashOwner'], axis = 1, inplace=True)\n",
+    "dia.set_index('HashFunction',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3e24ca4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1       20743\n",
+       "2       10715\n",
+       "3       11224\n",
+       "4       11180\n",
+       "5       11600\n",
+       "        ...  \n",
+       "1436    13552\n",
+       "1437    10971\n",
+       "1438    10588\n",
+       "1439    10815\n",
+       "1440    10481\n",
+       "Length: 1440, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dia_event=dia[dia['Trigger'] == 'timer'].drop(['Trigger'], axis = 1).sum()\n",
+    "Dia_event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "4c950fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coeficiente con funcion D: 327.3860745133403\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('coeficiente con funcion D:',D(Dia_event))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "782aab4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "988a72ff",
    "metadata": {},
@@ -8559,6 +8631,7 @@
     "    \n",
     "    #estadisticos \n",
     "    print(\"Estadisticos de funciones \"+str(key)+\":\")\n",
+    "    print(\"Coeficiente de variación: \", cv(grupos.get_group(key).drop(['Trigger'], axis = 1).sum()))\n",
     "    print(\"Indice de Dispersión: \", D(grupos.get_group(key).drop(['Trigger'], axis = 1).sum()))\n",
     "    print()\n",
     "    print()\n",
@@ -8590,7 +8663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "93ebdbf8",
    "metadata": {},
    "outputs": [
@@ -8609,6 +8682,68 @@
     "print(\"estadisticos funciones sin event y queue: \")\n",
     "print(\"Indice de Dispersión: \", D(dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum()))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d2774001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indice para todas las funciones:  6073.486579816947\n"
+     ]
+    }
+   ],
+   "source": [
+    "#indice para todas las funciones \n",
+    "print('indice para todas las funciones: ', D(dia.drop(['Trigger'], axis = 1).sum()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3658b119",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indice de Dispersión:  47589.18997582832\n"
+     ]
+    }
+   ],
+   "source": [
+    "# desviación estándar para event+queue y todo el resto.\n",
+    "print(\"Indice de Dispersión: \", dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum().std())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fccf3caa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd98f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2911d9bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
