std por triggers

--- a/Preguntas.ipynb
+++ b/Preguntas.ipynb
@@ -8511,7 +8511,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "540028eb",
+   "id": "47881113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8523,7 +8523,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3e24ca4c",
+   "id": "c4914938",
    "metadata": {},
    "outputs": [
     {
@@ -8556,7 +8556,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4c950fe0",
+   "id": "8c7e7dd5",
    "metadata": {},
    "outputs": [
     {
@@ -8575,7 +8575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782aab4a",
+   "id": "f7270c93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8686,8 +8686,10 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d2774001",
-   "metadata": {},
+   "id": "6853d058",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -8704,43 +8706,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "3658b119",
+   "execution_count": 57,
+   "id": "d4151ef9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indice de Dispersión:  47589.18997582832\n"
+      "desviación estándar event+queue:  47589.18997582832\n"
      ]
     }
    ],
    "source": [
     "# desviación estándar para event+queue y todo el resto.\n",
-    "print(\"Indice de Dispersión: \", dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum().std())\n"
+    "print(\"desviación estándar event+queue: \", dia[dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum().std())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "cfb97720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "desviación estándar todos menos event+queue:  19336.203163973772\n"
+     ]
+    }
+   ],
+   "source": [
+    "# desviación estándar para event+queue y todo el resto.\n",
+    "print(\"desviación estándar todos menos event+queue: \", dia[~dia.Trigger.isin([\"event\",\"queue\"])].drop(['Trigger'], axis = 1).sum().std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "020acc68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "desviación estándar event:  30353.583484744355\n",
+      "\n",
+      "\n",
+      "desviación estándar http:  15198.067765074202\n",
+      "\n",
+      "\n",
+      "desviación estándar orchestration:  5963.966506687178\n",
+      "\n",
+      "\n",
+      "desviación estándar others:  1811.1597960685901\n",
+      "\n",
+      "\n",
+      "desviación estándar queue:  31588.88539974765\n",
+      "\n",
+      "\n",
+      "desviación estándar storage:  720.7351961726895\n",
+      "\n",
+      "\n",
+      "desviación estándar timer:  1955.2016466430994\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#por cada tipo de Trigger \n",
+    "dia = pd.read_csv(\"invocations_per_function_md.anon.d05.csv\")\n",
+    "dia.drop(['HashApp', 'HashOwner'], axis = 1, inplace=True)\n",
+    "dia.set_index('HashFunction',inplace=True)\n",
+    "grupos = dia.groupby('Trigger')\n",
+    "for key, item in grupos:\n",
+    "    \n",
+    "    #estadisticos \n",
+    "    print(\"desviación estándar \"+str(key)+\": \", grupos.get_group(key).drop(['Trigger'], axis = 1).sum().std())\n",
+    "    print()\n",
+    "    print()\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fccf3caa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fd98f1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2911d9bd",
+   "id": "d142ffc5",
    "metadata": {},
    "outputs": [],
    "source": []
